--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -109,3 +109,8 @@ label.required:after {
   font-weight: bold;
   margin: 1.3em 0;
 }
+
+.table-nbElements {
+  margin: 1em 0;
+  font-weight: bold;
+}
