--- a/templates/admin/user/list.html.twig
+++ b/templates/admin/user/list.html.twig
@@ -11,7 +11,7 @@
         {{ form_start(form, {'action': path('app_admin_users_list')}) }}
         {{ form_widget(form) }}
 
-        <input type="submit" value="{{ 'form.admin.users.list.submit'|trans }}" class="btn btn-primary pull-right" />
+        <input type="submit" value="{{ 'form.admin.users.filter.submit'|trans }}" class="btn btn-primary pull-right" />
         {{ form_end(form) }}
     </div>
 
