--- a/templates/common/pagination.html.twig
+++ b/templates/common/pagination.html.twig
@@ -3,25 +3,25 @@
     <ul class="pagination">
         {% if page > 1 %}
             <li>
-                <a href="{{ path('app_admin_users_list', {'page': 1}) }}" aria-label="{{ 'pagination.first'|trans }}">
+                <a href="{{ path(route, {'page': 1}) }}" aria-label="{{ 'pagination.first'|trans }}">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
         {% endif %}
 
         {% for index in range(page-4, page-1) if index > 0 %}
-            <li><a href="{{ path('app_admin_users_list', {'page': index}) }}" aria-label="{{ 'pagination.page'|trans({'page': index}) }}">{{ index }}</a></li>
+            <li><a href="{{ path(route, {'page': index}) }}" aria-label="{{ 'pagination.page'|trans({'page': index}) }}">{{ index }}</a></li>
         {% endfor %}
 
         <li class="active"><a href="#">{{ page }}</a></li>
 
         {% for index in range(page+1, page+4) if index <= nbPages %}
-            <li><a href="{{ path('app_admin_users_list', {'page': index}) }}" aria-label="{{ 'pagination.page'|trans({'page': index}) }}">{{ index }}</a></li>
+            <li><a href="{{ path(route, {'page': index}) }}" aria-label="{{ 'pagination.page'|trans({'page': index}) }}">{{ index }}</a></li>
         {% endfor %}
 
         {% if page < nbPages %}
             <li>
-                <a href="{{ path('app_admin_users_list', {'page': nbPages}) }}" aria-label="{{ 'pagination.last'|trans }}">
+                <a href="{{ path(route, {'page': nbPages}) }}" aria-label="{{ 'pagination.last'|trans }}">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
