--- a/templates/validation/picture/list-processed.html.twig
+++ b/templates/validation/picture/list-processed.html.twig
@@ -59,5 +59,5 @@
         </table>
     </div>
 
-    {{ include('common/pagination.html.twig') }}
+    {% include 'common/pagination.html.twig' with {'page': page, 'nbPages': nbPages, 'route': 'app_validation_pictures_list_processed'} only %}
 {% endblock %}
