--- a/templates/validation/picture/list.html.twig
+++ b/templates/validation/picture/list.html.twig
@@ -65,5 +65,5 @@
         </table>
     </div>
 
-    {{ include('common/pagination.html.twig') }}
+    {% include 'common/pagination.html.twig' with {'page': page, 'nbPages': nbPages, 'route': 'app_validation_pictures_list'} only %}
 {% endblock %}
