Makefile impro, add sort by created at and asc or desc

--- a/templates/admin/place/list.html.twig
+++ b/templates/admin/place/list.html.twig
@@ -33,7 +33,7 @@
             </tr>
             {% for element in elements %}
                 <tr>
-                    <td><a href="#">{{ element.id }}</a></td>
+                    <td>{{ element.id }}</td>
                     <td>{{ element.title}}</td>
                     <td>{{ element.locale|upper }}</td>
                     <td>
