Add create travel step 1

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,4 +1,6 @@
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+@import '~bootstrap-datetimepicker-sass/src/sass/bootstrap-datetimepicker';
+@import '~easy-autocomplete/src/sass/easy-autocomplete';
 
 html, body {
   height: 100%;
