--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
     <title>{% block title %}Travel Book{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{{ asset('build/style-app.css') }}" />
     {% block stylesheets %}{% endblock %}
-    {#<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />#}
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
 <body>
 
