--- a/templates/common/user-bar.html.twig
+++ b/templates/common/user-bar.html.twig
@@ -5,6 +5,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <span class="glyphicon glyphicon-user"></span> {{ firstname }} {{ lastname }} ({{ username }}) <span class="caret"></span>
+                        <input type="hidden" id="user_lang" value="{{ locale }}" />
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ path('app_my_account') }}">{{ 'menu.my_account'|trans }}</a></li>
