--- a/templates/travel/add-pictures.html.twig
+++ b/templates/travel/add-pictures.html.twig
@@ -1,18 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>{{ 'travels.step1.title'|trans }}</h2>
+    <h2>{{ 'travels.add_pictures.title'|trans }}</h2>
 
     <div class="mini-body">
         {{ form_start(form) }}
 
         {{ form_widget(form) }}
 
-        <input type="submit" value="{{ 'form.travels.step1.submit'|trans }}" class="btn btn-primary pull-right disabled" disabled="disabled" />
+        <input type="submit" value="{{ 'form.travels.add_pictures.submit'|trans }}" class="btn btn-primary pull-right" />
         {{ form_end(form) }}
     </div>
 {% endblock %}
 
 {% block javascripts %}
     <script type="text/javascript" src="{{ asset('build/script-travels.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/script-travels-add-pictures.js') }}"></script>
 {% endblock %}
