--- a/templates/validation/picture/re-validation.html.twig
+++ b/templates/validation/picture/re-validation.html.twig
@@ -29,7 +29,7 @@
 
     <div class="mini-body">
 
-        <img src="{{ asset('data/pictures/' ~ picture.name) }}" />
+        <img src="{{ asset(picture_path(picture)) }}" />
 
         <br><br>
 
