--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,13 @@
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 @import '~bootstrap-datetimepicker-sass/src/sass/bootstrap-datetimepicker';
 @import '~easy-autocomplete/src/sass/easy-autocomplete';
+@import '~slick-carousel/slick/slick';
+@import '~slick-carousel/slick/slick-theme';
+
+.slick-prev::before,
+.slick-next::before {
+  color: #337ab7;
+}
 
 html, body {
   height: 100%;
