--- a/templates/validation/picture/invalidation.html.twig
+++ b/templates/validation/picture/invalidation.html.twig
@@ -5,7 +5,7 @@
 
     <div class="mini-body">
 
-        <img src="{{ asset('data/pictures/' ~ picture.name) }}" />
+        <img src="{{ asset(picture_path(picture)) }}" />
 
         <br><br>
 
