--- a/templates/validation/picture/list-processed.html.twig
+++ b/templates/validation/picture/list-processed.html.twig
@@ -37,7 +37,7 @@
                     <td>{{ element.id }}</td>
                     <td>{{ element.travel.user.username }} ({{ element.travel.user.firstname }} {{ element.travel.user.lastname }})</td>
                     <td>{{ element.travel.title }} ({{ element.travel.place.title }} {{ element.travel.startDate|date('d/m/Y')}}-{{ element.travel.endDate|date('d/m/Y') }})</td>
-                    <td><img src="{{ asset('data/pictures/' ~ element.name) }}" width="600px" /> </td>
+                    <td><img src="{{ asset(picture_path(element)) }}" width="600px" /> </td>
                     <td>{{ element.date|date('d/m/Y') }}</td>
                     <td>{{ element.place.title }}</td>
                     <td>{{ element.title }}</td>
