--- a/templates/mailing/password-lost.html.twig
+++ b/templates/mailing/password-lost.html.twig
@@ -1,4 +1,14 @@
-<ul>
-    <li>Username: {{ user.username }}</li>
-    <li>Password: {{ password }}</li>
-</ul>
+{% extends 'mailing/base.html.twig' %}
+
+{% trans_default_domain 'mails' %}
+
+{% block body %}
+    <h2>{{ 'password_lost.title'|trans }}</h2>
+
+    {{ 'password_lost.body'|trans }}
+
+    <ul>
+        <li>{{ 'password_lost.username'|trans }} {{ user.username }}</li>
+        <li>{{ 'password_lost.password'|trans }} {{ password }}</li>
+    </ul>
+{% endblock %}
