--- a/templates/mailing/change-password.html.twig
+++ b/templates/mailing/change-password.html.twig
@@ -1,1 +1,9 @@
-Information updated !
+{% extends 'mailing/base.html.twig' %}
+
+{% trans_default_domain 'mails' %}
+
+{% block body %}
+    <h2>{{ 'change_password.title'|trans }}</h2>
+
+    {{ 'change_password.body'|trans }}
+{% endblock %}
