Add behat: registration case

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,7 +12,7 @@
             <div class="panel-heading"><strong>{{ 'home.registration_title'|trans }}</strong></div>
 
             <div class="panel-body">
-                <p>{{ 'home.registration_body_1'|trans }} <a href="{{ path('app_registration') }}">{{ 'home.registration_body_2'|trans }}</a></p>
+                <p>{{ 'home.registration_body_1'|trans }} <a href="{{ path('app_registration') }}" title="{{ 'home.registration_title'|trans }}">{{ 'home.registration_body_2'|trans }}</a></p>
                 <p>{{ 'home.registration_body_3'|trans }}</p>
                 <p>{{ 'home.registration_body_4'|trans }}</p>
             </div>
@@ -25,7 +25,7 @@
             <div class="panel-heading"><strong>{{ 'home.connection_title'|trans }}</strong></div>
 
             <div class="panel-body">
-                <p>{{ 'home.connection_body_1'|trans }} <a href="{{ path('app_login') }}">{{ 'home.connection_body_2'|trans }}</a></p>
+                <p>{{ 'home.connection_body_1'|trans }} <a href="{{ path('app_login') }}" title="{{ 'home.connection_title'|trans }}">{{ 'home.connection_body_2'|trans }}</a></p>
             </div>
         </div>
 
@@ -37,7 +37,7 @@
 
             <div class="panel-body">
                 <p>{{ 'home.password_lost_body_1'|trans }}</p>
-                <p>{{ 'home.password_lost_body_2'|trans }} <a href="{{ path('app_password_lost') }}">{{ 'home.password_lost_body_3'|trans }}</a>{{ 'home.password_lost_body_4'|trans }}</p>
+                <p>{{ 'home.password_lost_body_2'|trans }} <a href="{{ path('app_password_lost') }}" title="{{ 'home.password_lost_title'|trans }}">{{ 'home.password_lost_body_3'|trans }}</a>{{ 'home.password_lost_body_4'|trans }}</p>
             </div>
         </div>
 
